--- a/LLM_evaluation_RAG.ipynb
+++ b/LLM_evaluation_RAG.ipynb
@@ -4,7 +4,8 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "gpuType": "T4"
+      "gpuType": "T4",
+      "include_colab_link": true
     },
     "kernelspec": {
       "name": "python3",
@@ -8571,8 +8572,18 @@
   },
   "cells": [
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/imankh7/NLP_LLM/blob/main/LLM_evaluation_RAG.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "id": "nVoLbFcI8Dob"
       },
@@ -8593,7 +8604,7 @@
         "id": "W7z0HdnHE4Ms",
         "outputId": "6f4c672c-c8ae-45d4-8ab4-32ea051ac788"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -8627,7 +8638,7 @@
         "id": "EVI5NXIxPRlE",
         "outputId": "e1d02d0f-50b5-4556-abaa-bf395df6d4b9"
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -8651,7 +8662,7 @@
         "id": "531msbbKQjj3",
         "outputId": "2efd2b3d-a422-47e6-d40d-61521317cb3e"
       },
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -8676,7 +8687,7 @@
       "metadata": {
         "id": "Wb91-G8p88MA"
       },
-      "execution_count": 43,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -8749,7 +8760,7 @@
         "id": "1xoFkw-V9e1G",
         "outputId": "3bfd58a0-fdb3-4a90-8234-0e6ea96ca9bd"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -8847,7 +8858,7 @@
         "id": "cgJgUB3I_F-C",
         "outputId": "d714c553-2229-4181-b5b4-a309876dc9fa"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -8882,7 +8893,7 @@
         "id": "e5P90-5o_qi0",
         "outputId": "ea93e9b6-79a1-4acb-9167-61bbd38faefb"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -8914,7 +8925,7 @@
       "metadata": {
         "id": "moDRlGZO_2c3"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -9015,7 +9026,7 @@
         "id": "wp-L9EiICMn_",
         "outputId": "276b0818-3e4b-4fa7-a067-a3d120e71b43"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -9339,7 +9350,7 @@
         "id": "XhUR_orhLqkH",
         "outputId": "66490d90-cd33-4cae-9b9d-4d4c6d895839"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -9375,7 +9386,7 @@
       "metadata": {
         "id": "e8XNDu4fLtHZ"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -9390,7 +9401,7 @@
         "id": "SGR7CB7_OXY2",
         "outputId": "740b0ca5-aad8-40c8-8846-6d3798465cb0"
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -9423,7 +9434,7 @@
       "metadata": {
         "id": "XB5ohfshNEE9"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -9438,7 +9449,7 @@
         "id": "o9Qz1oXQNHL8",
         "outputId": "e655288f-c08d-41aa-d557-508e5311d419"
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -9464,7 +9475,7 @@
       "metadata": {
         "id": "qD7SUTQjOPJ8"
       },
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -9480,7 +9491,7 @@
         "id": "Bsa7r5GDSv62",
         "outputId": "bd11c778-2905-417f-f413-d14e39d8b4b0"
       },
-      "execution_count": 35,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -9634,7 +9645,7 @@
         "id": "7eo8iLjfSyqA",
         "outputId": "2377a62e-648e-4ee0-8367-552fb9978011"
       },
-      "execution_count": 38,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -9818,7 +9829,7 @@
         "id": "7Y2xEg_iWTcs",
         "outputId": "67ff06be-63e6-44c1-bcf3-0a532cabe944"
       },
-      "execution_count": 39,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -9870,7 +9881,7 @@
         "id": "Wvu01NECWwNO",
         "outputId": "fa33e9cb-bf0a-441e-e95f-951572105a27"
       },
-      "execution_count": 40,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -9914,7 +9925,7 @@
       "metadata": {
         "id": "seZrGs8yW8gO"
       },
-      "execution_count": 47,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -9929,7 +9940,7 @@
         "id": "N9nLO4HtaQem",
         "outputId": "18dbf571-989c-4b8d-d643-945390a13b06"
       },
-      "execution_count": 48,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -9962,7 +9973,7 @@
       "metadata": {
         "id": "rKzvUgzYauKg"
       },
-      "execution_count": 50,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -9981,7 +9992,7 @@
         "id": "FJ3diE0TdEfX",
         "outputId": "be571be9-14fa-47b0-d6d1-289954aa6a53"
       },
-      "execution_count": 51,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -10199,7 +10210,7 @@
       "metadata": {
         "id": "RK-TNoqideJl"
       },
-      "execution_count": 52,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -10215,7 +10226,7 @@
         "id": "rTDIKcbyeAn1",
         "outputId": "81f8bec2-77ae-4fa4-9400-5037f690dfd6"
       },
-      "execution_count": 54,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
